<resources>
    <string name="app_name">HouseManager</string>

    <string name="devices">Devices</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="empty_str"></string>
    <string name="enter_device_name">Enter device name...</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="new_user_name">New user name</string>
    <string name="user_name">User name</string>
    <string name="new_password">New password</string>
    <string name="device_preferences">Device preferences</string>
    <string name="voice_control">Voice Control</string>
    <string name="entry_screen">Entry Screen</string>
    <string name="password">Password</string>
    <string name="on_back_tap_message">Please tap BACK again to exit</string>
    <string name="made_by_string">Made by\nVI year study student</string>
    <string name="developer_name">Andriy Medvid</string>
    <string name="department_string">Department of\nComputer Aided Design</string>
    <string name="baccalaureate_theme_top">Baccalaureate work theme</string>
    <string name="baccalaureate_theme">Software development subsystem of intelligent tools house management</string>
    <string name="android_house_manager">Android House Manager</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_user_name">Change User Name</string>
    <string name="change_user_password">Change user password</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="signout_dialog_message">Are you sure you want to close this session?</string>
    <string name="device_info">Device info</string>
    <string name="Update">Update</string>
    <string name="sync_dialog_message">Updating devices list</string>
    <string name="sync_dialog_title">Synchronisation</string>
    <string name="switched_on">Switched On</string>
    <string name="switched_off">Switched Off</string>
    <string name="confirm_password">Confirm password</string>
    <string name="witing_for_command">Waiting for command...</string>
    <string name="voice_control_info">Voice control info</string>
    <string name="voice_control_info_title">Use device microphone for managing devices by commands in the list below.</string>
    <string name="swipe_up_down_to_close">Swipe Up/Down To Close</string>
    <string name="measurement_statistic">Measurement statistic</string>
    <string name="measurement_time_limits">Measurement time limits</string>
    <string name="please_select_first_date">Please select first date</string>
    <string name="single_date">Single Date</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="to_time">To time</string>
    <string name="from_time">From time</string>
    <string name="please_select_first_time">Please select First time</string>
    <string name="single_time">Single Time</string>
    <string name="please_select_second_date">Please select second date</string>
    <string name="please_select_second_time">Please select Second time</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="line_chart">Line Chart</string>
    <string name="room">Room</string>
    <string name="status">Status</string>
    <string name="model">Model</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="switching_off_device">Switching off device</string>
    <string name="ok">Ok</string>
    <string name="device_is_busy_by_another_user">Device is busy by another user</string>
    <string name="toggle_device_status">Toggle device status</string>
    <string name="save_to_gallery">Save yo gallery</string>
    <string name="saved_to_gallery">Chart Saved to Gallery</string>
    <string name="saving_to_gallery_failed">Saving Chart to Gallery Failed</string>
    <string name="search">Search</string>
    <string name="search_empty_message">No matches found</string>
    <string name="no_devices_found">No devices Found</string>
    <string name="day_and_full_month_name_and_year_date_format">dd MMMM yyyy</string>
    <string name="selected_date_can_not_be_the_same_as_second_date">Selected date can\'t be the same as Second Date</string>
    <string name="selected_date_can_not_be_bigger_then_second_date">Selected date can\'t be bigger than Second Date</string>
    <string name="selected_date_can_not_be_the_same_as_first_date">Selected date can\'t be the same as First Date</string>
    <string name="selected_date_can_not_lessr_then_first_date">Selected date can\'t be less than First Date</string>
    <string name="selected_time_can_not_be_the_same_as_first_time">Selected time can\'t be the same as First Time</string>
    <string name="selected_time_can_not_lessr_then_first_time">Selected time can\'t be less than First Time</string>
    <string name="selected_time_can_not_be_bigger_then_second_time">Selected time can\'t be bigger than Second Time</string>
    <string name="selected_time_can_not_be_the_same_as_second_time">Selected time can\'t be the same as Second Time.</string>
    <string name="please_enter_user_name">Please enter user name</string>
    <string name="please_enter_user_password">Please enter password</string>
    <string name="please_confirm_password">Please confirm password</string>
    <string name="confirm_password_must_be_repeated_exactly">Confirm password must be repeated exactly</string>
    <string name="user_name_changed_successfully">User name changed successfully</string>
    <string name="user_name_changing_failed">User name changing failed</string>
    <string name="user_password_changed_successfully">User password changed successfully</string>
    <string name="user_password_changing_failed">User password changing failed</string>
    <string name="view_statistics">View statistics</string>
    <string name="is_busy">Is Busy</string>
    <string name="type">Type</string>
    <string name="university_name">National University\nLviv Polytechnic</string>
    <string name="start">Start</string>
    <string name="tutorial_page_1_description">Easy control your house using android devices.</string>
    <string name="tutorial_page_2_description">Create and manage accounts for independent control.</string>
    <string name="tutorial_page_3_description">Manage every single device. Easy get stored information.</string>
    <string name="tutorial_page_4_description">Use voice control possibilities for quick setup.</string>
    <string name="last_command">Last command</string>
    <string name="executing_command">Executing command</string>
    <string name="initialization">Initialization...</string>
    <string name="voice_recognition">Voice recognition</string>
    <string name="try_again">Try again</string>

</resources>

