<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/edge_big_minus">

    <TextView
        android:id="@+id/tv_measurement_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="@dimen/edge_huge_minus"
        android:layout_marginRight="@dimen/edge_big_plus"
        android:layout_marginTop="@dimen/edge_big_minus"
        android:text="@string/measurement_time_limits"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/green_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edge_above"
        android:layout_marginRight="@dimen/edge_big_minus"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/tv_first_date_select_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/please_select_first_date"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <com.rey.material.widget.CheckBox
            style="@style/Material.Drawable.CheckBox"
            android:id="@+id/cb_single_date_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/single_date"
            android:gravity="left|center"
            android:textColor="@color/gray_measurement_screen"
            android:paddingLeft="@dimen/edge_normal"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_from_date_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/edge_above"
        android:layout_marginLeft="@dimen/edge_normal_medium"
        android:textSize="@dimen/edge_big_plus"
        android:drawableRight="@drawable/arrow_cut_down_gray"
        android:gravity="center|left"
        android:text="@string/from_date"
        android:textColor="@color/gray_measurement_screen" />

    <include
        layout="@layout/line_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edge_large_most_plus"
        android:layout_marginRight="@dimen/edge_big_plus" />

    <TextView
        android:id="@+id/tv_second_date_select_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edge_above"
        android:gravity="left"
        android:text="@string/please_select_second_date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_to_date_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/edge_above"
        android:layout_marginLeft="@dimen/edge_normal_medium"
        android:textSize="@dimen/edge_big_plus"
        android:drawableRight="@drawable/arrow_cut_down_gray"
        android:gravity="center|left"
        android:text="@string/to_date"
        android:textColor="@color/gray_measurement_screen" />

    <include
        layout="@layout/line_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edge_large_most_plus"
        android:layout_marginRight="@dimen/edge_big_plus" />

    <TextView
        android:id="@+id/tv_first_time_select_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edge_above"
        android:layout_marginTop="@dimen/edge_normal_plus"
        android:gravity="left"
        android:text="@string/please_select_first_time"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_from_time_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/edge_above"
        android:layout_marginLeft="@dimen/edge_normal_medium"
        android:drawableRight="@drawable/arrow_cut_down_gray"
        android:gravity="center|left"
        android:textSize="@dimen/edge_big_plus"
        android:text="@string/from_time"
        android:textColor="@color/gray_measurement_screen" />

    <include
        layout="@layout/line_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/edge_big_plus" />

    <TextView
        android:id="@+id/tv_from_time_select_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/edge_above"
        android:layout_marginTop="@dimen/edge_large_most_plus"
        android:gravity="left"
        android:text="@string/please_select_second_time"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_to_time_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/edge_above"
        android:drawableRight="@drawable/arrow_cut_down_gray"
        android:gravity="center|left"
        android:layout_marginLeft="@dimen/edge_normal_medium"
        android:text="@string/to_time"
        android:textSize="@dimen/edge_big_plus"
        android:textColor="@color/gray_measurement_screen" />

    <include
        layout="@layout/line_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/edge_big_plus" />
</LinearLayout>