<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="@dimen/edge_above_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/made_by_string"
        android:textColor="@color/black"
        android:textSize="@dimen/edge_big"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="National University Lviv Polytechnic"
        android:textColor="@color/black"
        android:textSize="@dimen/edge_big"
        android:gravity="center"
        android:layout_marginTop="@dimen/edge_above_medium"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/department_string"
        android:textColor="@color/black"
        android:textSize="@dimen/edge_big"
        android:gravity="center"
        android:layout_marginTop="@dimen/edge_normal_plus"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/baccalaureate_theme_top"
        android:textColor="@color/black"
        android:textSize="@dimen/edge_big"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/edge_above_medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/baccalaureate_theme"
        android:textColor="@color/black"
        android:textSize="@dimen/edge_big"
        android:gravity="center"
        android:layout_marginTop="@dimen/edge_normal_plus"
        android:textStyle="italic"/>

</LinearLayout>