<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_password_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_dark"
    android:orientation="vertical"
    android:padding="@dimen/edge_big_minus">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:background="@null"
        android:drawableBottom="@drawable/ic_menu_moreoverflow_normal_holo_dark"
        android:text="@string/swipe_up_down_to_close"
        android:textColor="@color/white"
        android:textSize="@dimen/text_mini_normal"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_password_settings_title"
        style="@style/TextViewSettingsTitleStyle"
        android:text="@string/password" />

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/edge_normal_plus"
        float:fletPaddingBottom="@dimen/edge_above_medium"
        float:fletTextAppearance="@style/floatlabelededittext">

        <EditText
            android:id="@+id/et_enter_new_password"
            style="@style/EditText_Style"
            android:layout_marginBottom="@dimen/edge_above"
            android:layout_marginLeft="@dimen/edge_normal_plus"
            android:layout_marginRight="@dimen/edge_normal_plus"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColorHint="@color/white" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/edge_above_medium"
        float:fletPaddingBottom="@dimen/edge_above_medium"
        float:fletTextAppearance="@style/floatlabelededittext">

        <EditText
            android:id="@+id/et_confirm_new_password"
            style="@style/EditText_Style"
            android:layout_marginBottom="@dimen/edge_above"
            android:layout_marginLeft="@dimen/edge_normal_plus"
            android:layout_marginRight="@dimen/edge_normal_plus"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:textColorHint="@color/white" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>


    <Button
        android:id="@+id/tv_change_user_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:layout_marginTop="@dimen/expand_group_list_item_padding"
        android:padding="@dimen/edge_medium"
        android:text="@string/change_user_password"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium_mini" />

</LinearLayout>
