<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_user_name_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/input_screens_background"
    android:orientation="vertical"
    android:padding="@dimen/edge_big_minus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/edge_large">

    <TextView
        android:id="@+id/tv_user_name_settings_title"
        style="@style/TextViewSettingsTitleStyle"
        android:textColor="@color/status_bar_gray"
        android:text="@string/user_name" />

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/edge_above_medium"
        float:fletPaddingBottom="@dimen/edge_above_medium"
        float:fletTextAppearance="@style/floatlabelededittext">

        <EditText
            android:id="@+id/et_new_user_name"
            style="@style/EditText_Style.Green"
            android:layout_marginBottom="@dimen/edge_above"
            android:layout_marginLeft="@dimen/edge_normal_plus"
            android:layout_marginRight="@dimen/edge_normal_plus"
            android:hint="@string/new_user_name"
            android:inputType="text" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <Button
        android:id="@+id/btn_change_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/expand_group_list_item_padding"
        android:background="@drawable/button"
        android:layout_gravity="center"
        android:paddingTop="@dimen/edge_big"
        android:paddingBottom="@dimen/edge_big"
        android:paddingLeft="@dimen/edge_large_plus"
        android:paddingRight="@dimen/edge_large_plus"
        android:text="@string/change_user_name"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/text_medium_mini" />
    </LinearLayout>
</LinearLayout>