<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/input_screens_background"
    android:orientation="vertical"
    android:padding="@dimen/edge_big_minus"
    tools:context=".DeviceActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/edge_large_plus">

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="Device"
            android:textColor="@color/green_dark_plus"
            android:textSize="@dimen/text_large" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_device_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                android:textColor="@color/green_dark_plus"
                android:textSize="@dimen/text_medium" />

            <com.rey.material.widget.Switch
                android:id="@+id/switch_status"
                style="@style/Material.Widget.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:paddingLeft="@dimen/edge_above" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/edge_tiny"
        android:background="@color/gray_brighter"/>

    <TableLayout
        android:id="@+id/hided_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/edge_huge_minus">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green_dark_plus"
                android:text="@string/model"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/tv_device_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:textColor="@color/status_bar_gray"
                android:paddingLeft="@dimen/edge_above"
                android:textSize="@dimen/text_almost_large" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/edge_large_plus">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/green_dark_plus"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/tv_device_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:paddingLeft="@dimen/edge_above"
                android:textColor="@color/status_bar_gray"
                android:textSize="@dimen/text_almost_large" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/edge_large_plus">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room"
                android:textColor="@color/green_dark_plus"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/tv_device_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:textColor="@color/status_bar_gray"
                android:paddingLeft="@dimen/edge_above"
                android:textSize="@dimen/text_almost_large" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/edge_large_plus">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_busy"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/green_dark_plus" />

            <TextView
                android:id="@+id/tv_device_is_busy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:textColor="@color/status_bar_gray"
                android:paddingLeft="@dimen/edge_above"
                android:textSize="@dimen/text_almost_large" />
        </TableRow>


    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_devices_measurement_statistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/button"
            android:padding="@dimen/edge_above"
            android:text="@string/view_statistics"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_normal_medium" />
    </RelativeLayout>


</LinearLayout>